--- a/tpl/app.html
+++ b/tpl/app.html
@@ -86,13 +86,13 @@
 <!-- / aside right -->
 
 <!-- footer -->
-<div class="app-footer wrapper b-t bg-light">
+<div class="app-footer wrapper bg-light">
     <!-- <span class="pull-right">{{app.version}}
         <a href ui-scroll="app" class="m-l-sm text-muted">
             <i class="fa fa-long-arrow-up"></i>
         </a>
     </span> -->
-    <p style="text-align: center">
+    <p style="text-align: center;position: fixed;bottom: 10px; left: 50%;">
             &copy; 2018 虎特信息科技(上海)有限公司 版权所有
     </p>  
 </div>
