--- a/tpl/app.html
+++ b/tpl/app.html
@@ -9,10 +9,18 @@
 <!-- / menu -->
 
 <!-- content -->
-<div class="app-content">
+<div class="app-content" >
     <div ui-butterbar></div>
     <a href class="off-screen-toggle hide" ui-toggle-class="off-screen" data-target=".app-aside"></a>
-    <div class="app-content-body fade-in-up" ui-view></div>
+    <div class="app-content-body fade-in-up" ui-view>
+        
+    </div>
+    <div style="width: 100%;padding-bottom: 10px;min-height: 10px;" class="app-content-body">
+            <p style="text-align: center;" style="position: absolute;bottom: 10px;left:50%; ">
+                    &copy; 2018 虎特信息科技(上海)有限公司 版权所有
+            </p>  
+    </div>
+   
 </div>
 <!-- /content -->
 
@@ -86,16 +94,8 @@
 <!-- / aside right -->
 
 <!-- footer -->
-<div class="app-footer wrapper bg-light">
-    <!-- <span class="pull-right">{{app.version}}
-        <a href ui-scroll="app" class="m-l-sm text-muted">
-            <i class="fa fa-long-arrow-up"></i>
-        </a>
-    </span> -->
-    <p style="text-align: center;position: fixed;bottom: 10px; left: 50%;">
-            &copy; 2018 虎特信息科技(上海)有限公司 版权所有
-    </p>  
-</div>
+<!-- <div class="app-footer wrapper bg-light" style="position: relative;">
+</div> -->
 <!-- / footer -->
 
 <div data-ng-include=" 'tpl/blocks/settings.html' " class="settings panel panel-default">
