--- a/src/pages/set_rule/set_rule.html
+++ b/src/pages/set_rule/set_rule.html
@@ -14,7 +14,7 @@
                     <div class="row">
                         <div class="form-group col-md-1 col-md-offset-5">
                             <label style="width: 100%;">&nbsp;</label>
-                            <button ng-disabled="disabledUpdata" class="form-control btn btn-primary btn_style"  style="max-width: 80px;" ng-click="real_time_update()">更&nbsp;新</button>
+                            <button ng-disabled="disabledUpdata" class="btn btn-primary btn_style"  style="max-width: 80px;" ng-click="real_time_update()">更新</button>
                         </div>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                     <div class="row">
                         <div class="form-group col-md-1 col-md-offset-5">
                             <label style="width: 100%;">&nbsp;</label>
-                            <button class="form-control btn btn-primary btn_style" ng-disabled="offline_update_button" style="max-width: 80px;" ng-click="offline_update()">更&nbsp;新</button>
+                            <button class="btn btn-primary btn_style" ng-disabled="offline_update_button" style="max-width: 80px;" ng-click="offline_update()">更新</button>
                         </div>
                     </div>
                 </div>
