--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>ThreatEye防APT解决方案</title>
+    <title>ThreatEye高级威胁检测系统</title>
     <meta name="description" content="app, web app, responsive, responsive layout, admin, admin panel, admin dashboard, flat, flat ui, ui kit, AngularJS, ui route, charts, widgets, components"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -20,12 +20,10 @@
     <link rel="stylesheet" href="src/css/zeroModal.css" type="text/css" />
     <!-- <link rel="stylesheet" href="src/css/element.css" type="text/css" /> -->
     <link rel="stylesheet" href="src/plugins/bootstrap-switch/css/bootstrap3/bootstrap-switch.css" type="text/css" />
-
     <link rel="stylesheet" href="src/plugins/font-awesome-4.7.0/css/font-awesome.css" type="text/css" />
     <link rel="stylesheet" href="src/plugins/datatables/dataTables.bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="src/plugins/datepicker/datepicker3.css" type="text/css" />
     <link rel="stylesheet" href="src/plugins/daterangepicker/daterangepicker.css" type="text/css" />
-
     <!-- 模块css -->
     <link rel="stylesheet" href="src/pages/signin/signin.css" type="text/css" />
     <link rel="stylesheet" href="src/plugins/particles/demo.css" type="text/css" />
@@ -53,8 +51,6 @@
     <link rel="stylesheet" href="src/pages/set_net_ip/set_net_ip.css" type="text/css" />
     <link rel="stylesheet" href="src/pages/set_rule/set_rule.css" type="text/css" />
     <link rel="stylesheet" href="src/pages/set_user/set_user.css" type="text/css" />
-
-
 </head>
 
 <body ng-controller="AppCtrl">
@@ -62,10 +58,8 @@
         ui-view></div>
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
-
     <!-- Angular -->
     <script src="vendor/angular/angular.js"></script>
-
     <script src="vendor/angular/angular-animate/angular-animate.js"></script>
     <script src="vendor/angular/angular-cookies/angular-cookies.js"></script>
     <script src="vendor/angular/angular-resource/angular-resource.js"></script>
@@ -74,7 +68,6 @@
     <!-- Vendor -->
     <script src="vendor/angular/angular-ui-router/angular-ui-router.js"></script>
     <script src="vendor/angular/ngstorage/ngStorage.js"></script>
-
     <!-- bootstrap -->
     <script src="vendor/angular/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- lazyload -->
@@ -86,24 +79,17 @@
     <script src="vendor/angular/angular-translate/storage-local.js"></script>
     <!-- 引入echarts -->
     <script src="vendor/modules/echarts/dist/echarts.min.js"></script>
-
     <script src="src/plugins/particles/particles.min.js"></script>
     <!-- <script src="src/plugins/particles/demo.js"></script> -->
     <!-- <script src="src/plugins/particles/app.js"></script> -->
-
     <!-- timepicker -->
     <script src="src/plugins/timepicker/bootstrap-timepicker.min.js"></script>
     <script src="src/plugins/daterangepicker/moment.min.js"></script>
     <script src="src/plugins/daterangepicker/moment.js"></script>
     <script src="src/plugins/daterangepicker/moment-zh.js"></script>
     <script src="src/plugins/daterangepicker/daterangepicker.js"></script>
-
     <script src="src/plugins/zeroModal.min.js"></script>
-
     <!-- <script src="src/plugins/element-angular.js"></script> -->
-
-
-
     <!-- App -->
     <script src="js/app.js"></script>
     <script src="js/config.js"></script>
