--- a/src/pages/alarm_detail/alarm_detail.html
+++ b/src/pages/alarm_detail/alarm_detail.html
@@ -280,8 +280,10 @@
                                             <span ng-bind="network_events.smb.dest_ip"></span>:
                                             <span ng-bind="network_events.smb.dest_port"></span>
                                         </td>
-                                        <td ng-bind="network_events.smb.smb.ntlmssp.domain" title="{{network_events.smb.smb.ntlmssp.domain}}"></td>
-                                        <td ng-bind="network_events.smb.smb.ntlmssp.user" title="{{network_events.smb.smb.ntlmssp.user}}"></td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <!-- <td ng-bind="network_events.smb.smb.ntlmssp.domain" title="{{network_events.smb.smb.ntlmssp.domain}}"></td> -->
+                                        <!-- <td ng-bind="network_events.smb.smb.ntlmssp.user" title="{{network_events.smb.smb.ntlmssp.user}}"></td> -->
                                         <td ng-bind="network_events.smb.app_proto" title="{{network_events.smb.app_proto}}"></td>
                                     </tr>
                                 </div>
