--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -1,10 +1,6 @@
 <div class="container w-xxl w-auto-xs" ng-controller="SigninFormController" ng-init="app.settings.container = false;">
-
-
     <a href class="navbar-brand block m-t head-title">{{app.name}}</a>
-
-    <p class="head_subtitle">ThreatEye Anti-APT Network Solution</p>
-    <!-- <div>iConnect安全管理平台2.0</div> -->
+    <p class="head_subtitle">ThreatEye Advanced Threat Detection System</p>
     <div class="m-b-lg">
         <!-- 已注册 -->
         <form name="form" class="form-validation" ng-if="!login_show">
